--- a/css/main.css
+++ b/css/main.css
@@ -1,320 +1,324 @@
-/* line 14, sass/_base.scss */
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
-/* line 22, sass/_base.scss */
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+}
 
-/* line 27, sass/_base.scss */
 body {
   width: 100%;
-  color: #28283e;
+  color: hsl(240deg, 21%, 20%);
   font-family: "Red Hat Display", sans-serif;
   text-rendering: optimizeSpeed;
-  background-color: #fafafa; }
+  background-color: hsl(0deg, 0%, 98%);
+}
 
-/* line 35, sass/_base.scss */
 html,
 body {
-  min-height: 100%; }
+  min-height: 100%;
+}
 
-/* line 40, sass/_base.scss */
 img {
   display: block;
-  max-width: 100%; }
+  max-width: 100%;
+}
 
-/* line 45, sass/_base.scss */
 p,
 h1,
 h2 {
-  overflow-wrap: break-word; }
+  overflow-wrap: break-word;
+}
 
-/* line 51, sass/_base.scss */
 a {
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
-/* line 56, sass/_base.scss */
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
-/* line 1, sass/_utilities.scss */
 h1 {
-  font-size: 6.4rem;
-  font-weight: 900;
-  line-height: 6.4rem; }
-
-/* line 7, sass/_utilities.scss */
-h2 {
   font-size: 4rem;
   font-weight: 900;
-  line-height: 4.4rem; }
+  line-height: 4rem;
+}
 
-/* line 13, sass/_utilities.scss */
-.overline {
-  font-size: 1.6rem;
+h2 {
+  font-size: 2.5rem;
   font-weight: 900;
-  line-height: 2.6rem;
+  line-height: 2.75rem;
+}
+
+.overline {
+  font-size: 1rem;
+  font-weight: 900;
+  line-height: 1.625rem;
   letter-spacing: 4px;
   text-transform: uppercase;
-  color: #4d96a8; }
+  color: hsl(192deg, 37%, 48%);
+}
 
-/* line 22, sass/_utilities.scss */
 .lead {
-  font-size: 1.8rem;
+  font-size: 1.125rem;
   font-weight: 500;
-  line-height: 2.6rem;
-  color: #86869c; }
+  line-height: 1.625rem;
+  color: hsl(240deg, 10%, 57%);
+}
 
-/* line 29, sass/_utilities.scss */
 .text-primary {
-  color: #90e4f9; }
+  color: hsl(192deg, 90%, 77%);
+}
 
-/* line 33, sass/_utilities.scss */
 .text-secondary {
-  color: #d9b8ff; }
+  color: hsl(268deg, 100%, 86%);
+}
 
-/* line 1, sass/_components.scss */
 .btn {
   display: inline-block;
-  padding: 1.6rem 4rem;
+  padding: 1rem 2.5rem;
   border-radius: 100px;
   font-weight: 700;
-  font-size: 1.6rem;
-  line-height: 2.6rem;
-  color: #fafafa;
+  font-size: 1rem;
+  line-height: 0.625rem;
+  color: hsl(0deg, 0%, 98%);
   text-align: center;
-  transition: 0.3s; }
-  /* line 12, sass/_components.scss */
-  .btn-primary {
-    background-color: #4d96a8; }
-    /* line 15, sass/_components.scss */
-    .btn-primary:hover {
-      background-color: #5ba2b3; }
-  /* line 20, sass/_components.scss */
-  .btn-secondary {
-    background-color: #845eb0; }
-    /* line 23, sass/_components.scss */
-    .btn-secondary:hover {
-      background-color: #9f81c1; }
+  transition: 0.3s;
+}
+.btn-primary {
+  background-color: hsl(192deg, 37%, 48%);
+}
+.btn-primary:hover {
+  background-color: #5ba2b3;
+}
+.btn-secondary {
+  background-color: hsl(268deg, 34%, 53%);
+}
+.btn-secondary:hover {
+  background-color: #9f81c1;
+}
 
-/* line 29, sass/_components.scss */
 .number {
   display: inline-block;
   border: 1px solid rgba(134, 134, 156, 0.25);
   border-radius: 50%;
-  padding: 1.5rem 1.9rem;
+  padding: 0.9375rem 1.1875rem;
   font-weight: 900;
-  font-size: 1.6rem;
-  line-height: 2.6rem;
-  color: #86869c;
-  background-color: #fafafa;
-  position: relative; }
-  /* line 43, sass/_components.scss */
-  .number::before {
-    content: "";
-    display: block;
-    width: 1px;
-    height: 84px;
-    background-color: rgba(134, 134, 156, 0.25);
-    position: absolute;
-    top: -84px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 999; }
-  /* line 57, sass/_components.scss */
-  .number-1 {
-    margin-bottom: 6.4rem;
-    margin-top: 84px; }
-  /* line 62, sass/_components.scss */
-  .number-2 {
-    margin-top: 55px;
-    top: 29px; }
+  font-size: 1rem;
+  line-height: 1.625rem;
+  color: hsl(240deg, 10%, 57%);
+  background-color: hsl(0deg, 0%, 98%);
+  position: relative;
+}
+.number::before {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 84px;
+  background-color: rgba(134, 134, 156, 0.25);
+  position: absolute;
+  top: -84px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+}
+.number-1 {
+  margin-bottom: 4rem;
+  margin-top: 5.25rem;
+}
+.number-2 {
+  margin-top: 3.4375rem;
+  top: 1.8125rem;
+}
 
-/* line 68, sass/_components.scss */
 .gallery {
   display: grid;
-  grid-template-columns: repeat(4, minmax(16.4rem, 25.5rem));
-  gap: 3rem;
-  margin-bottom: 8rem; }
-  /* line 75, sass/_components.scss */
-  .gallery__img {
-    border-radius: 5px;
-    overflow: hidden; }
-    /* line 79, sass/_components.scss */
-    .gallery__img :hover {
-      transform: scale(1.15);
-      filter: grayscale(15);
-      transition: 0.5s; }
+  grid-template-columns: repeat(4, minmax(10.25rem, 15.9375rem));
+  gap: 1.875rem;
+  margin-bottom: 5rem;
+}
+.gallery__img {
+  border-radius: 5px;
+  overflow: hidden;
+}
+.gallery__img :hover {
+  transform: scale(1.15);
+  filter: grayscale(15);
+  transition: 0.5s;
+}
 
-/* line 1, sass/_header.scss */
 .header {
-  margin-bottom: 11rem; }
-  /* line 4, sass/_header.scss */
-  .header__logo {
-    margin-top: 8rem;
-    margin-bottom: 6.1rem; }
+  margin-bottom: 6.875rem;
+}
+.header__logo {
+  margin-top: 5rem;
+  margin-bottom: 3.8125rem;
+}
 
-/* line 10, sass/_header.scss */
 .hero {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  max-width: 144rem;
+  max-width: 90rem;
   background-image: url(../images/desktop/image-hero-left.png), url(../images/desktop/image-hero-right.png);
   background-repeat: no-repeat;
-  background-position: top left, bottom right; }
-  /* line 23, sass/_header.scss */
-  .hero__img {
-    display: none; }
-  /* line 27, sass/_header.scss */
-  .hero__description {
-    max-width: 54rem;
-    text-align: center;
-    margin: 47px 0 7px 0; }
-    /* line 32, sass/_header.scss */
-    .hero__description h1 {
-      max-width: 45rem;
-      margin: 0 auto 3.4rem; }
-    /* line 37, sass/_header.scss */
-    .hero__description__buttons {
-      display: flex;
-      justify-content: center;
-      gap: 1.6rem;
-      margin-top: 3.2rem; }
+  background-position: top left, bottom right;
+}
+.hero__img {
+  display: none;
+}
+.hero__description {
+  max-width: 33.75rem;
+  text-align: center;
+  margin: 47px 0 7px 0;
+}
+.hero__description h1 {
+  max-width: 28.125rem;
+  margin: 0 auto 2.125rem;
+}
+.hero__description__buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
 
-/* line 1, sass/_footer.scss */
 .footer {
   background-image: linear-gradient(rgba(77, 150, 168, 0.8), rgba(77, 150, 168, 0.8)), url(../images/desktop/image-footer.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 11.5rem 1rem 10rem; }
-  /* line 9, sass/_footer.scss */
-  .footer__content {
-    max-width: 111rem;
-    color: #fafafa;
-    display: grid;
-    grid-template-columns: 30% 32% auto;
-    grid-template-columns: 35% 31% auto;
-    align-items: center;
-    justify-content: space-between; }
-    /* line 19, sass/_footer.scss */
-    .footer__content p {
-      color: inherit; }
+  padding: 7.1875rem 0.625rem 6.25rem;
+}
+.footer__content {
+  max-width: 69.375rem;
+  color: hsl(0deg, 0%, 98%);
+  display: grid;
+  grid-template-columns: 30% 32% auto;
+  grid-template-columns: 35% 31% auto;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer__content p {
+  color: inherit;
+}
 
-/* line 1, sass/_sections.scss */
 .section-1 {
-  margin-bottom: 7.2rem; }
-  /* line 4, sass/_sections.scss */
-  .section-1__description {
-    max-width: 54rem;
-    text-align: center; }
-    /* line 8, sass/_sections.scss */
-    .section-1__description h2 {
-      margin-top: 1.6rem;
-      margin-bottom: 3.2rem; }
+  margin-bottom: 4.5rem;
+}
+.section-1__description {
+  max-width: 33.74rem;
+  text-align: center;
+}
+.section-1__description h2 {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  margin-inline: auto;
+  max-width: 28rem;
+}
 
 @media screen and (max-width: 75rem) {
-  /* line 3, sass/_media.scss */
   h1 {
-    font-size: 4.8rem;
-    line-height: 4.8rem; }
-  /* line 8, sass/_media.scss */
+    font-size: 3rem;
+    line-height: 3rem;
+  }
   .lead {
-    font-size: 1.6rem; }
-  /* line 13, sass/_media.scss */
+    font-size: 1rem;
+  }
   .header {
-    margin-bottom: 8rem; }
-    /* line 16, sass/_media.scss */
-    .header__logo {
-      margin-top: 4.8rem;
-      margin-bottom: 6.4rem; }
-  /* line 22, sass/_media.scss */
+    margin-bottom: 5rem;
+  }
+  .header__logo {
+    margin-top: 3rem;
+    margin-bottom: 4rem;
+  }
   .hero {
     background-image: none;
-    flex-direction: column; }
-    /* line 26, sass/_media.scss */
-    .hero__img {
-      display: block;
-      margin-bottom: 7.2rem; }
-    /* line 31, sass/_media.scss */
-    .hero__description {
-      max-width: 45rem;
-      margin: 0; }
-      /* line 35, sass/_media.scss */
-      .hero__description h1 {
-        max-width: 34rem;
-        margin: 0 auto 2.4rem; }
-  /* line 43, sass/_media.scss */
+    flex-direction: column;
+  }
+  .hero__img {
+    display: block;
+    margin-bottom: 4.5rem;
+  }
+  .hero__description {
+    max-width: 28.125rem;
+    margin: 0;
+  }
+  .hero__description h1 {
+    max-width: 21.25rem;
+    margin: 0 auto 1.5rem;
+  }
   .gallery {
-    gap: 1.1rem;
-    margin: 0 4rem;
-    margin-bottom: 4.8rem; }
-  /* line 51, sass/_media.scss */
+    gap: 0.6875rem;
+    margin: 0 2.5rem;
+    margin-bottom: 3rem;
+  }
   .footer {
     background-image: linear-gradient(rgba(77, 150, 168, 0.8), rgba(77, 150, 168, 0.8)), url(../images/tablet/image-footer.jpg);
-    padding: 9.2rem 2.4rem 7rem; }
-    /* line 57, sass/_media.scss */
-    .footer__content {
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      max-width: 57rem; }
-      /* line 64, sass/_media.scss */
-      .footer__content p {
-        margin: 3.2rem 0 4rem;
-        max-width: 57rem; } }
-
+    padding: 5.75rem 1.5rem 4.375rem;
+  }
+  .footer__content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    max-width: 35.625rem;
+  }
+  .footer__content p {
+    margin: 2rem 0 2.5rem;
+    max-width: 35.625rem;
+  }
+}
 @media screen and (max-width: 48em) {
-  /* line 74, sass/_media.scss */
   h1 {
-    font-size: 4rem;
-    line-height: 4rem; }
-  /* line 79, sass/_media.scss */
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
   h2 {
-    font-size: 3.2rem;
-    line-height: 3.6rem; }
-  /* line 85, sass/_media.scss */
+    font-size: 2rem;
+    line-height: 2.25rem;
+  }
   .header {
-    margin-bottom: 6.4rem; }
-    /* line 88, sass/_media.scss */
-    .header__logo {
-      margin-bottom: 5.4rem; }
-  /* line 94, sass/_media.scss */
+    margin-bottom: 4rem;
+  }
+  .header__logo {
+    margin-bottom: 3.375rem;
+  }
   .hero__img {
-    margin-bottom: 4.8rem; }
-  /* line 98, sass/_media.scss */
+    margin-bottom: 3rem;
+  }
   .hero__description {
-    max-width: 32rem; }
-    /* line 101, sass/_media.scss */
-    .hero__description__buttons {
-      flex-direction: column;
-      align-items: center; }
-  /* line 109, sass/_media.scss */
+    max-width: 20rem;
+  }
+  .hero__description__buttons {
+    flex-direction: column;
+    align-items: center;
+  }
   .gallery {
     grid-template-columns: repeat(2, 1fr);
-    gap: 2.5rem;
-    margin: 0 2.4rem;
-    margin-bottom: 6.4rem; }
-  /* line 118, sass/_media.scss */
+    gap: 1.5625rem;
+    margin: 0 1.5rem;
+    margin-bottom: 4rem;
+  }
   .section-1 {
-    margin-bottom: 6.4rem; }
-    /* line 121, sass/_media.scss */
-    .section-1__description {
-      margin: 0 2.4rem; }
-  /* line 127, sass/_media.scss */
+    margin-bottom: 4rem;
+  }
+  .section-1__description {
+    margin: 0 1.5rem;
+  }
   .footer {
-    background-image: linear-gradient(rgba(77, 150, 168, 0.8), rgba(77, 150, 168, 0.8)), url(../images/mobile/image-footer.jpg); }
-    /* line 132, sass/_media.scss */
-    .footer__content p {
-      margin: 2.4rem 0 3.2rem; } }
+    background-image: linear-gradient(rgba(77, 150, 168, 0.8), rgba(77, 150, 168, 0.8)), url(../images/mobile/image-footer.jpg);
+  }
+  .footer__content p {
+    margin: 1.5rem 0 2rem;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
