--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,10 +1,10 @@
 .btn {
   display: inline-block;
-  padding: 1.6rem 4rem;
+  padding: 1rem 2.5rem;
   border-radius: 100px;
   font-weight: 700;
-  font-size: 1.6rem;
-  line-height: 2.6rem;
+  font-size: 1rem;
+  line-height: 0.625rem;
   color: $light;
   text-align: center;
   transition: 0.3s;
@@ -30,11 +30,11 @@
   display: inline-block;
   border: 1px solid rgba($grey, 0.25);
   border-radius: 50%;
-  padding: 1.5rem 1.9rem;
+  padding: 0.9375rem 1.1875rem;
 
   font-weight: 900;
-  font-size: 1.6rem;
-  line-height: 2.6rem;
+  font-size: 1rem;
+  line-height: 1.625rem;
   color: $grey;
   background-color: $light;
 
@@ -55,22 +55,22 @@
   }
 
   &-1 {
-    margin-bottom: 6.4rem;
-    margin-top: 84px;
+    margin-bottom: 4rem;
+    margin-top: 5.25rem;
   }
 
   &-2 {
-    margin-top: 55px;
-    top: 29px;
+    margin-top: 3.4375rem;
+    top: 1.8125rem;
   }
 }
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(4, minmax(16.4rem, 25.5rem));
-  gap: 3rem;
+  grid-template-columns: repeat(4, minmax(10.25rem, 15.9375rem));
+  gap: 1.875rem;
 
-  margin-bottom: 8rem;
+  margin-bottom: 5rem;
 
   &__img {
     border-radius: 5px;
